// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DrawerMenu 1`] = `
<react-mdl-FooterSection
  type="middle"
>
  <react-mdl-FooterDropDownSection
    title="Menu"
  >
    <react-mdl-FooterLinkList>
      <a
        aria-current={null}
        href="/features"
        onClick={[Function]}
      >
        Feature Toggles
      </a>
      <a
        aria-current={null}
        href="/strategies"
        onClick={[Function]}
      >
        Strategies
      </a>
      <a
        aria-current={null}
        href="/history"
        onClick={[Function]}
      >
        Event History
      </a>
      <a
        aria-current={null}
        href="/archive"
        onClick={[Function]}
      >
        Archived Toggles
      </a>
      <a
        aria-current={null}
        href="/applications"
        onClick={[Function]}
      >
        Applications
      </a>
      <a
        aria-current={null}
        href="/tag-types"
        onClick={[Function]}
      >
        Tag types
      </a>
      <a
        aria-current={null}
        href="/logout"
        onClick={[Function]}
      >
        Sign out
      </a>
      <a
        href="https://github.com/Unleash/unleash/"
        target="_blank"
      >
        GitHub
      </a>
    </react-mdl-FooterLinkList>
  </react-mdl-FooterDropDownSection>
  <react-mdl-FooterDropDownSection
    title="Client SDKs"
  >
    <react-mdl-FooterLinkList>
      <a
        href="https://github.com/Unleash/unleash-client-node/"
      >
        Node.js
      </a>
      <a
        href="https://github.com/Unleash/unleash-client-java/"
      >
        Java
      </a>
      <a
        href="https://github.com/Unleash/unleash-client-go/"
      >
        Go
      </a>
      <a
        href="https://github.com/unleash/unleash-client-ruby"
      >
        Ruby
      </a>
      <a
        href="https://github.com/Unleash/unleash-client-python"
      >
        Python
      </a>
      <a
        href="https://github.com/Unleash/unleash-client-core"
      >
        .Net Core
      </a>
      <a
        href="https://unleash.github.io/docs/client_sdk"
      >
        All client SDKs
      </a>
    </react-mdl-FooterLinkList>
  </react-mdl-FooterDropDownSection>
</react-mdl-FooterSection>
`;

exports[`should render DrawerMenu with "features" selected 1`] = `
<react-mdl-FooterSection
  type="middle"
>
  <react-mdl-FooterDropDownSection
    title="Menu"
  >
    <react-mdl-FooterLinkList>
      <a
        aria-current="page"
        className="active"
        href="/features"
        onClick={[Function]}
        style={Object {}}
      >
        Feature Toggles
      </a>
      <a
        aria-current={null}
        href="/strategies"
        onClick={[Function]}
      >
        Strategies
      </a>
      <a
        aria-current={null}
        href="/history"
        onClick={[Function]}
      >
        Event History
      </a>
      <a
        aria-current={null}
        href="/archive"
        onClick={[Function]}
      >
        Archived Toggles
      </a>
      <a
        aria-current={null}
        href="/applications"
        onClick={[Function]}
      >
        Applications
      </a>
      <a
        aria-current={null}
        href="/tag-types"
        onClick={[Function]}
      >
        Tag types
      </a>
      <a
        aria-current={null}
        href="/logout"
        onClick={[Function]}
      >
        Sign out
      </a>
      <a
        href="https://github.com/Unleash/unleash/"
        target="_blank"
      >
        GitHub
      </a>
    </react-mdl-FooterLinkList>
  </react-mdl-FooterDropDownSection>
  <react-mdl-FooterDropDownSection
    title="Client SDKs"
  >
    <react-mdl-FooterLinkList>
      <a
        href="https://github.com/Unleash/unleash-client-node/"
      >
        Node.js
      </a>
      <a
        href="https://github.com/Unleash/unleash-client-java/"
      >
        Java
      </a>
      <a
        href="https://github.com/Unleash/unleash-client-go/"
      >
        Go
      </a>
      <a
        href="https://github.com/unleash/unleash-client-ruby"
      >
        Ruby
      </a>
      <a
        href="https://github.com/Unleash/unleash-client-python"
      >
        Python
      </a>
      <a
        href="https://github.com/Unleash/unleash-client-core"
      >
        .Net Core
      </a>
      <a
        href="https://unleash.github.io/docs/client_sdk"
      >
        All client SDKs
      </a>
    </react-mdl-FooterLinkList>
  </react-mdl-FooterDropDownSection>
</react-mdl-FooterSection>
`;
